tests/baselines/reference/newLineInTypeofInstantiation.errors.txt
tests/cases/compiler/newLineInTypeofInstantiation.ts(4,6): error TS2635: Type 'number' has no signatures for which the type argument list is applicable.
tests/cases/compiler/newLineInTypeofInstantiation.ts(4,8): error TS1005: ';' expected.


==== tests/cases/compiler/newLineInTypeofInstantiation.ts (2 errors) ====
    interface Example {
        (a: number): typeof a
      
        <T>(): void
         ~
!!! error TS2635: Type 'number' has no signatures for which the type argument list is applicable.
           ~
!!! error TS1005: ';' expected.
    }
    